# modelprinter

./: .gitignore  INSTALL.md  README.md  pyproject.toml  wsgi.py
deploy/: modelprinter.env  modelprinter.service  nginx.conf
modelprinter/: app.py  jobs.py  pdf_info.py  pdf_tools.py  printing.py
scripts/: install.sh
static/: app.css  app.js
templates/: index.html
tests/: test_pdf_tools.py
