[project]
name = "modelprinter"
version = "0.1.0"
description = ""
authors = [
    {name = "meska",email = "meskatech@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "pikepdf (>=10.5.1,<11.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
